oauth1-request-derive/tests/ui/attrs.stderr
error: unknown attribute `unknown`
 --> tests/ui/attrs.rs:2:10
  |
2 | #[oauth1(unknown)]
  |          ^^^^^^^

error: unknown attribute `unknown::path`
 --> tests/ui/attrs.rs:6:10
  |
6 | #[oauth1(unknown::path)]
  |          ^^^^^^^

error: unknown attribute `unknown`
  --> tests/ui/attrs.rs:10:10
   |
10 | #[oauth1(unknown = "")]
   |          ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/ui/attrs.rs:14:10
   |
14 | #[oauth1(unknown::path = "")]
   |          ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/ui/attrs.rs:18:10
   |
18 | #[oauth1(unknown::path(""))]
   |          ^^^^^^^

error: expected string literal
  --> tests/ui/attrs.rs:23:23
   |
23 |     #[oauth1(rename = 0)]
   |                       ^

error: expected meta word
  --> tests/ui/attrs.rs:26:14
   |
26 |     #[oauth1(skip = "")]
   |              ^^^^

error: expected meta word
  --> tests/ui/attrs.rs:29:14
   |
29 |     #[oauth1(skip(""))]
   |              ^^^^

error: expected name-value meta
  --> tests/ui/attrs.rs:32:14
   |
32 |     #[oauth1(skip_if)]
   |              ^^^^^^^

error: expected name-value meta
  --> tests/ui/attrs.rs:35:14
   |
35 |     #[oauth1(skip_if(""))]
   |              ^^^^^^^

error: unknown attribute `unknown`
  --> tests/ui/attrs.rs:38:14
   |
38 |     #[oauth1(unknown)]
   |              ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/ui/attrs.rs:41:14
   |
41 |     #[oauth1(unknown::path)]
   |              ^^^^^^^

error: unknown attribute `unknown`
  --> tests/ui/attrs.rs:44:14
   |
44 |     #[oauth1(unknown = "")]
   |              ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/ui/attrs.rs:47:14
   |
47 |     #[oauth1(unknown::path = "")]
   |              ^^^^^^^

error: unknown attribute `unknown`
  --> tests/ui/attrs.rs:50:14
   |
50 |     #[oauth1(unknown(""))]
   |              ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/ui/attrs.rs:53:14
   |
53 |     #[oauth1(unknown::path(""))]
   |              ^^^^^^^

error: duplicate attribute `skip`
  --> tests/ui/attrs.rs:56:20
   |
56 |     #[oauth1(skip, skip)]
   |                    ^^^^

error: duplicate attribute `encoded`
  --> tests/ui/attrs.rs:60:14
   |
60 |     #[oauth1(encoded)]
   |              ^^^^^^^

error: duplicate attribute `rename`
  --> tests/ui/attrs.rs:63:28
   |
63 |     #[oauth1(rename = "a", rename = "b")]
   |                            ^^^^^^

error: duplicate attribute `rename`
  --> tests/ui/attrs.rs:67:14
   |
67 |     #[oauth1(rename = "d")]
   |              ^^^^^^

error: expected boolean literal
  --> tests/ui/attrs.rs:70:23
   |
70 |     #[oauth1(option = FALSE)]
   |                       ^^^^^

error: expected path
  --> tests/ui/attrs.rs:73:20
   |
73 |     #[oauth1(fmt = |_, _| Ok(()))]
   |                    ^

error: parameter name must be URI-safe
  --> tests/ui/attrs.rs:80:23
   |
80 |     #[oauth1(rename = "?")]
   |                       ^^^

error: duplicate parameter "duplicate"
  --> tests/ui/attrs.rs:77:23
   |
77 |     #[oauth1(rename = "duplicate")]
   |                       ^^^^^^^^^^^
